css/styles.css
@import "reset.css";

:root {
    --main-font: system-ui, sans-serif;
}

body, button, input {
    font-family: var(--main-font);
}

body {
    display: flex;
}

.hero-section {
    flex: 1;
}

.form-section {
    display: flex;
    flex-direction: column;
    flex: 2;
}

.form-explanation {
    flex: 2;
    gap: 1em;
    font-size: 24px;
    justify-content: center;
}

p {
    white-space: pre-line;
}

.form-container {
    flex: 1;
    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5); 
}

.form-row {
    display: flex;
    gap: 6rem;
    margin-bottom: 1em;
}

h2 {
    margin-bottom: 1em;
}

.form-group {
    display: flex;
    flex-direction: column;
    gap: 2px;
}

input {
    width: 300px;
    border: 2px solid rgb(226, 226, 231);
    border-radius: 5px;
}

.form-submit {
    flex: 2;
    gap: 2rem;
}

button {
    width: 250px;
    height: 50px;
    border: none;
    border-radius: 10px;
    background-color: green;
    color: white;
    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5); 
}

#login {
    text-decoration: none;
    color: green;
    font-weight: bold;
}

.form-section > * {
    display: flex;
    flex-direction: column;
    padding: 3rem;
}

.form-explanation, .form-submit {
    background-color: ghostwhite;
}

